Portfolio, faire le php pour le form

--- a/BOOTSTRAP/Site bootstrap/Portfolio/index.html
+++ b/BOOTSTRAP/Site bootstrap/Portfolio/index.html
@@ -15,15 +15,15 @@
   <title>Portfolio | Bastien Duliege</title>
 </head>
 
-<body>
+<body class="bg-secondary">
   <!-- MENU/HEADER  à suivre -->
-  <header class="bg-secondary sticky-top">
+  <header class="bg-dark sticky-top">
     <div class="container">
       <div class="row">
         <nav class="navbar navabr-expand navbar-dark">
           <div class="col-12 p-2 my-auto align-items-center d-flex justify-content-between col-md-4 col-lg-4">
             <a href="" class="navbar-brand-md text-uppercase fw-bold">
-              <span class="bg-dark bg-gradient p-1 rounded-1 text-light">Bastien</span>
+              <span class="bg-success bg-gradient p-1 rounded-1 text-light">Bastien</span>
               <span class="text-light">Duliege</span>
             </a>
             <button class="navbar-toggler btn-secondary bg-dark d-md-none" type="button" data-bs-toggle="collapse"
@@ -35,16 +35,16 @@
           <div class="col-12 collapse navbar-collapses d-md-block col-md-8 col-lg-8" id="navbarNav">
             <ul class="navbar-nav d-md-flex flex-md-row justify-content-md-end">
               <li class="nav-item">
-                <a href="#qui" class="nav-link btn btn-secondary p-2">Qui suis-je?</a>
+                <a href="#qui" class="nav-link btn btn-dark p-2">Qui suis-je?</a>
               </li>
               <li class="nav-item">
-                <a href="#expertise" class="nav-link btn btn-secondary p-2">Expertise</a>
+                <a href="#expertise" class="nav-link btn btn-dark p-2">Expertise</a>
               </li>
               <li class="nav-item">
-                <a href="#portfolio" class="nav-link btn btn-secondary p-2">Portefolio</a>
+                <a href="#portfolio" class="nav-link btn btn-dark p-2">Portefolio</a>
               </li>
               <li class="nav-item5">
-                <a href="#contact" class="nav-link btn btn-secondary p-2">Contact</a>
+                <a href="#contact" class="nav-link btn btn-dark p-2">Contact</a>
               </li>
             </ul>
           </div>
@@ -54,10 +54,10 @@
   </header>
   <!-- Présentation -->
 
-  <main id="qui">
-    <section class="container my-5">
+  <main id="qui" class="bg-secondary">
+    <section class="container">
       <div class="row d-flex flex-column d-sm-flex flex-sm-row">
-        <div class="col-12 col-sm-6">
+        <div class="col-12 col-sm-6 my-5">
           <h1 class="my-2">
             Je suis Bastien Duliege Développeur fullstack en formation.
           </h1>
@@ -68,14 +68,14 @@
             </button>
           </div>
         </div>
-        <div class="col-12 col-sm-6">
-          <img class="w-100" src="./img/bastienportfolio.png" alt="photo de Bastien" />
+        <div class="col-12 col-sm-6 my-5">
+          <img class="w-100 rounded" src="./img/bastienportfolio.png" alt="photo de Bastien" />
         </div>
       </div>
     </section>
 
     <!-- Mes compétences -->
-    <section id="expertise" class="bg-light">
+    <section id="expertise" class="bg-secondary">
       <section class="container my-5">
         <h3 class="fs-3 fs-md-2">
           Mon expertise dans le développement front end et back end
@@ -202,7 +202,7 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active">
-            <div class="d-md-block bg-success text-center p-2 d-lg-none">
+            <div class="d-md-block bg-secondary text-center p-2 d-lg-none">
               <h5 class=" ">                  
                 Voici un exercie que j'ai réaliser sur des transition en CSS, je vous invite a passer le <a class="text-light" href="https://bastiend.000webhostapp.com/Exercice%20transition_menu%20Jerome/CSS%20transitions_standard.html" target="_blank">voir ! </a>
               </h5>
@@ -215,13 +215,13 @@
                   Voici un exercie que j'ai réaliser sur des transition en CSS, je vous invite a passer le voir ! 
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-dark" href="https://bastiend.000webhostapp.com/Exercice%20transition_menu%20Jerome/CSS%20transitions_standard.html" target="_blank">Par ici la visite !</a>
+                  <a class="btn btn-lg btn-success" href="https://bastiend.000webhostapp.com/Exercice%20transition_menu%20Jerome/CSS%20transitions_standard.html" target="_blank">Par ici la visite !</a>
                 </p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="d-md-block d-lg-none bg-success text-center p-2">
+            <div class="d-md-block d-lg-none bg-secondary text-center p-2">
               <h5 class=" ">                  
                 Mon tout premier site réaliser en HTML 5 et CSS 3, je vous invite a passer le <a class="text-light" href="https://bastiend.000webhostapp.com/chocolatBoom2021/index.html" target="_blank"> voir! </a>
               </h5>
@@ -235,14 +235,14 @@
                   CSS !
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-dark"
+                  <a class="btn btn-lg btn-success"
                     href="https://bastiend.000webhostapp.com/chocolatBoom2021/index.html" target="_blank">ChocoBoom c'est par ici !</a>
                 </p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="d-md-block bg-success text-center p-2 d-lg-none">
+            <div class="d-md-block bg-secondary text-center p-2 d-lg-none">
               <h5 class=" ">                  
                 Voici autre exercie que j'ai réaliser sur des transition en CSS, je vous invite a passer le <a class="text-light" href="https://bastiend.000webhostapp.com/Menu%20anim%C3%A9%20en%20css%20J%C3%A9rome/Menu%20anim%C3%A9%20en%20CSS_standard.html" target="_blank"> voir! </a>
               </h5>
@@ -255,7 +255,7 @@
                   Un nouvel exercice que j'ai réaliser avec des transition en CSS ! 
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-dark" href="https://bastiend.000webhostapp.com/Menu%20anim%C3%A9%20en%20css%20J%C3%A9rome/Menu%20anim%C3%A9%20en%20CSS_standard.html" target="_blank">Passez le voir !</a>
+                  <a class="btn btn-lg btn-success" href="https://bastiend.000webhostapp.com/Menu%20anim%C3%A9%20en%20css%20J%C3%A9rome/Menu%20anim%C3%A9%20en%20CSS_standard.html" target="_blank">Passez le voir !</a>
                 </p>
               </div>
             </div>
@@ -273,17 +273,17 @@
       </div>
     </section>
 
-    <!-- Contact ENVOIS DEMAIL PAS ENCORE FONCTIONELLE-->
-      <section id="contact" class="bg-light">
-      <section class="container my-5">
+    <!-- Contact-->
+    <section id="contact">
+      <section class="container">
         <div class="row">
           <h3 class="fs-3 fs-md-2">Un projet de création web?</h3>
           <h5>Allons en discuter autour d'un café</h5>
-          <div class="col my-2 col-sm-4">
+          <div class="col my-2 col-sm-4 d-none d-md-block">
             <img class="w-100 h-100 align-items-center justify-content-center" src="./img/coffee-ge384c50a7_1280.jpg" alt="Image d'un café" />
           </div>
-          <div class="col-8 my-2 text-justify col-sm-8">
-            <form method="post" action="formulaire.php" target="_blank">
+          <div class="col-12 my-2 text-justify col-sm-12 col-md-8">
+            <form method="post" action="mail.php" target="_blank">
               <fieldset>
                 <legend>Me contacter</legend>
                 <div class="form-group">
@@ -314,10 +314,11 @@
   <!-- FOOTER -->
 
   <footer class="container-fluid mt-5">
+    <hr>
     <div class="row d-flex flex-column text-center d-md-flex flex-md-row">
       <div class="col bg-secondary py-4 text-center justify-content-center align-items-center">
         <a href="" class="navbar-brand-md text-uppercase fw-bold">
-          <span class="bg-dark bg-gradient p-1 rounded-1 text-light">Bastien</span>
+          <span class="bg-success bg-gradient p-1 rounded-1 text-light">Bastien</span>
           <span class="text-light">Duliege</span>
         </a>
       </div>
