--- a/JavaScript/Java_table/index.html
+++ b/JavaScript/Java_table/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./scripts/script.js" defer></script>
-    <title>essais Java</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>table multiplications</title>
 </head>
-<body id="body">
+<body>
 
-    <header id="header">
 
-    </header>
-
-    <button id="mon_bouton">Clique moi !</button>
+    
 </body>
 </html>
