Création dossier Java et entrainement diverse

--- a/JavaScript/Java_pendu/index.html
+++ b/JavaScript/Java_pendu/index.html
@@ -5,14 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./scripts/script.js" defer></script>
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Damnier échec</title>
+    <title>Java | Le Pendu</title>
 </head>
 <body>
 
     <header>
-        <h1>Bastien Echec Game</h1>
+        <h1>Vas tu être pendu?</h1>
     </header>
-    
-    
+
+    <main>
+        <section id="alphabet">
+
+        </section>
+
+        <section id="button_essais">
+
+        </section>
+
+        <section id="span_lettre">
+
+        </section>
+
+        <section>
+
+        </section>
+    </main>
+
 </body>
 </html>
