Modification java_pokemon

--- a/JavaScript/Java_pokemon/index.html
+++ b/JavaScript/Java_pokemon/index.html
@@ -23,7 +23,7 @@
 
           <p>
             Pour connaître ses caractéristiques
-            <button type="submit" name="pokemon">Chercher via JS</button>
+            <button type="submit" name="pokemon">Choisir un Pokémon</button>
           </p>
 
           <section id="resultat"></section>
