Ajout d'un dossier au dossier bootstrap

--- a/JavaScript/Java_date/index.html
+++ b/JavaScript/Java_date/index.html
@@ -13,7 +13,7 @@
             <legend>Rentrez votre date de naissances, je vous donnerais le nombre de jour avant votre anniversaire </legend>
             <input type="text" name="date" id="jours" placeholder="Votre jours de naissances au format : JJ">
             <input type="text" name="date" id="mois" placeholder="Votre mois de naissances au format : MM">
-            <input type="text" name="date" id="annee" placeholder="L'année de votre prochain anniversaire  : AAAA">
+            <input type="text" name="date" id="annee" placeholder="L'année de votre naissances au format  : AAAA">
 
             <button type="submit" name="date" id="btnSoumettre">Soumettre</button>
         </fieldset>
